--- a/sbc-config-client-demo.properties
+++ b/sbc-config-client-demo.properties
@@ -1,1 +1,6 @@
 a=b
+spring.datasource.url=jdbc:mysql://database:3306/sbc_demo?useUnicode=true&characterEncoding=UTF8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
+spring.datasource.username=test
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
